Bug 258257 - New headline looks odd for multi line titles
Summary: New headline looks odd for multi line titles
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 08:36 UTC by Thomas Baumgart
Modified: 2010-11-29 16:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-11-29 08:36:06 UTC
Version:           SVN trunk (using KDE 1.2) 
OS:                Linux

Please check the title line above the views wrt to the scheduled transactions view. It is spread over two lines and looks odd.

Reproducible: Always
Comment 1 Cristian Oneț 2010-11-29 08:46:08 UTC
I've tested this in KDE version >= 4.5. This is caused by this line in kmymoneyview.cpp:186 and AFAIK only on KDE version <= 4.3.
m_scheduleViewFrame = m_model->addPage(m_scheduledView, i18n("Scheduled\ntransactions"));

A good fix would be at kmymoneyview.cpp:1656 to replace '\n' with ' ' in m_model->data(current).toString() - maybe conditioned by the same version test.
Comment 2 Thomas Baumgart 2010-11-29 16:39:22 UTC
SVN commit 1202082 by tbaumgart:

Replace \n with blank in title label

BUG: 258257

 M  +1 -0      kmymoneytitlelabel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202082
Comment 3 Thomas Baumgart 2010-11-29 16:41:46 UTC
SVN commit 1202083 by tbaumgart:

Replace \n with blank in title label.

Backported to stable branch.

BUG: 258257

 M  +1 -0      kmymoneytitlelabel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202083