Replace \n with blank in title label.

Backported to stable branch.

BUG: 258257

svn path=/branches/kmymoney/4.5/; revision=1202083